* Tue Apr 30 2024 Jean-Philippe Pialasse <jpp@koozali.org> 11.0.0-8.sme - create dedicated log files and logrotate [SME: 12664]

--- a/root/usr/lib/systemd/system/smanager.service
+++ b/root/usr/lib/systemd/system/smanager.service
@@ -7,7 +7,7 @@ After=network.target
 Type=simple
 SyslogIdentifier=smanager
 WorkingDirectory=/usr/share/smanager/script
-PIDFile=/var/run/smanager.pid
+PIDFile=/run/smanager.pid
 ExecStartPre=/sbin/e-smith/service-status smanager
 ExecStart=/usr/bin/hypnotoad srvmngr -f
 ExecStop=/usr/bin/hypnotoad -s srvmngr
