* Fri Jan 24 2025 Brian Read <brianr@koozali.org> 11.0.0-44.sme - Change to network-online for systemd startup to make sure network is up [SME: 12758]

--- a/root/usr/lib/systemd/system/smanager.service
+++ b/root/usr/lib/systemd/system/smanager.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Server Manager 2 Mojo
-Requires=network.target httpd-e-smith.service ldap.service
-After=network.target 
+Requires=network-online.target httpd-e-smith.service ldap.service
+After=network-online.target 
 
 [Service]
 Type=simple
